--- a/public/css/style.css
+++ b/public/css/style.css
@@ -818,14 +818,11 @@ body.mobile-nav-active #mobile-nav-toggle {
   background: #fff;
   background-size: cover;
   padding: 60px 10px 40px 0;
-  margin-right: 105px;
-  margin-left: 105px;
 }
 #qualification .garis {
   border-bottom: 2px solid #ddd;
 }
 #qualification .title {
-  margin-left: 60px;
   font-weight: 700;
   margin-bottom: 15px;
 }
@@ -928,6 +925,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #gallery .gallery-wrap {
   box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
+  
   transition: 0.3s;
 }
 
@@ -942,12 +940,17 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #gallery .gallery-item figure {
-  background: #000;
-  overflow: hidden;
+  background: #fff;
   height: 240px;
   position: relative;
   border-radius: 4px 4px 0 0;
   margin: 0;
+}
+
+#gallery .gallery-item figure img {
+  object-fit: contain;
+  width: 100%;
+  height: 240px;
 }
 
 #gallery .gallery-item figure:hover img {
