--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,3 +81,22 @@
         opacity: 1;
     }
 }
+
+.instafeed {
+  text-align: center;
+}
+
+.instafeed li {
+  display: inline-block;
+  width: 80px;
+  margin-bottom: 0 !important;
+  position: relative;
+  height: 80px;
+}
+
+.instafeed li img {
+  margin: 1px;
+  width: 95%;
+  height: 95%;
+  object-fit: cover;
+}
